@@ -1,5 +1,11 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+1/8/15: Make Boxstartend fill to mean of existing data when extracting only
+one slice per point.
+
+1/8/15: Added a script Rawtomocoords to compute positions in the raw tilt
+series, projection angles, and defocus for points marked in a tomogram.
+
 1/3/15: Implemented a dynamic adjustment of maximum strip width in
 Ctfphaseflip to minimize artifactual rings of low values around the zeros in
 the power spectrum.  Spacing between strips is increased between wider strips
